k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
 
metadata:
  name: flask-ingress
  namespace: flask
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
 
spec:
  ingressClassName: nginx
 
  tls:
  - hosts:
    - devops.lucktales.in
    secretName: flask-tls
 
  rules:
  - host: devops.lucktales.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:         
          service:
            name: flask-service
            port:
              number: 80
